Fix top menu gap

--- a/imports/ui/TopMenu.styl
+++ b/imports/ui/TopMenu.styl
@@ -1,5 +1,5 @@
 .ui.menu.top-menu
-  margin-bottom 0.3rem
+  height 3rem
   a.item:active, a.item:hover
     background none
   .dropdown.item:active, .dropdown.item:hover
